# sol

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  cloud_build.yaml  cloudbuild.yaml
.cargo/: config.toml
kubernetes/: sol.yaml
src/: main.rs
