[package]
name = "sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
quinn = "*"
pem = "*"
rustls = "*"
game_common = { git = "ssh://git@example.com/voxelphile/game_common.git" }
ssl = { git = "hssh://git@example.com/voxelphile/ssh.git" }