[package]
name = "sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
quinn = "*"
pem = "*"
rustls = "*"
game_common = { git = "ssh://git@github.com/voxelphile/game_common.git" }
ssl = { git = "ssh://git@github.com/voxelphile/ssh.git" }

[net]
git-fetch-with-cli = true